Fix alignment in profile main section by changing justify-content to align-items

--- a/src/components/Profile/ProfileInfo.module.scss
+++ b/src/components/Profile/ProfileInfo.module.scss
@@ -3,7 +3,7 @@
 .profile_main{
     width: 100%;
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
 
     &_section{
